Fix header text being cut off when navigating to anchors

--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -54,9 +54,11 @@ $card-list-gap: 15px;
 // CSS Vars
 :root {
     --header-height: 60px;
+    scroll-padding-top: 76px;
 
     @media #{$bp-tablet-landscape-up} {
         --header-height: 72px;
+        scroll-padding-top: 88px;
     }
 }
 
