--- a/sass/elements/_html.scss
+++ b/sass/elements/_html.scss
@@ -3,6 +3,7 @@ html {
     font-family: 'Fira Sans', sans-serif;
     font-size: calc-rem($size-body-mobile);
     background-color: $color-grey-900;
+    scroll-padding-top: 76px;
 
     * {
         box-sizing: border-box;
@@ -12,5 +13,6 @@ html {
 
     @media #{$bp-tablet-portrait-up} {
         font-size: calc-rem($size-body);
+        scroll-padding-top: 88px;
     }
 }
